hphp/hack/test/typecheck/list_array_assign.php.like_types.exp
File "list_array_assign.php", line 5, characters 10-26:
Invalid return type (Typing[4110])
File "list_array_assign.php", line 3, characters 31-52:
Expected ~(array<int>, int, int) because it is an unenforceable type
File "list_array_assign.php", line 5, characters 10-26:
But got (~array<int>, ~int, ~int)
